[gd_scene load_steps=11 format=2]

[ext_resource path="res://art/temp/OverworldUIs/HealthBar/HealthBar_empty.png" type="Texture" id=1]
[ext_resource path="res://art/temp/OverworldUIs/HealthBar/HealthBar_bg.png" type="Texture" id=2]
[ext_resource path="res://art/temp/OverworldUIs/HealthBar/HealthBar_fill.png" type="Texture" id=3]
[ext_resource path="res://art/temp/OverworldUIs/HealthBar/HealthIcon.png" type="Texture" id=4]
[ext_resource path="res://global/OverWorldUIs/OverWorldUIs.gd" type="Script" id=5]
[ext_resource path="res://art/fonts/STXINWEI.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://art/temp/OverworldUIs/EnergyBar/EnergyBar_fill_tiredout.png" type="Texture" id=7]
[ext_resource path="res://art/temp/OverworldUIs/EnergyBar/EnergyIcon.png" type="Texture" id=8]
[ext_resource path="res://art/temp/OverworldUIs/EnergyBar/EnergyBar_fill.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 22
outline_color = Color( 0.298039, 0.286275, 0.286275, 1 )
font_data = ExtResource( 6 )

[node name="OverWorldUIs" type="Node2D"]
script = ExtResource( 5 )

[node name="HealthBar" type="Node2D" parent="."]
position = Vector2( 60, 20 )
z_index = 899

[node name="bg" type="TextureRect" parent="HealthBar"]
margin_right = 150.0
margin_bottom = 25.0
mouse_filter = 2
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar" type="TextureProgress" parent="HealthBar"]
anchor_right = 0.729
margin_left = 3.0
margin_top = 3.0
margin_right = 146.0
margin_bottom = 22.0
value = 100.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 3 )
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxHealthValue" type="Label" parent="HealthBar"]
margin_left = 75.0
margin_top = 7.0
margin_right = 115.0
margin_bottom = 21.0
text = "/100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TempHealthValue" type="Label" parent="HealthBar"]
margin_left = -10.0
margin_top = 7.0
margin_right = 75.0
margin_bottom = 21.0
grow_horizontal = 0
text = "80"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartSprite" type="Sprite" parent="HealthBar"]
position = Vector2( -25, 12 )
texture = ExtResource( 4 )

[node name="Tween" type="Tween" parent="HealthBar"]

[node name="EnergyBar" type="Node2D" parent="."]
position = Vector2( 60, 80 )
z_index = 899

[node name="TextureRect" type="TextureRect" parent="EnergyBar"]
margin_right = 150.0
margin_bottom = 25.0
mouse_filter = 2
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar" type="TextureProgress" parent="EnergyBar"]
anchor_right = 0.729
margin_left = 3.0
margin_top = 3.0
margin_right = 146.0
margin_bottom = 22.0
value = 80.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 9 )
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TiredOutBar" type="TextureProgress" parent="EnergyBar"]
visible = false
anchor_right = 0.729
margin_left = 3.0
margin_top = 3.0
margin_right = 146.0
margin_bottom = 22.0
value = 80.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 7 )
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TiredOutLabel" type="Label" parent="EnergyBar/TiredOutBar"]
margin_left = 45.0
margin_top = -3.0
margin_right = 93.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.176471, 0.168627, 0.168627, 1 )
text = "力竭"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergySprite" type="Sprite" parent="EnergyBar"]
position = Vector2( -25, 12 )
texture = ExtResource( 8 )

[node name="Tween" type="Tween" parent="EnergyBar"]
